# ligero-prover

./: .clangd.template  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE.md  README.md  RELEASE.json  reroot.sh
emscripten_templates/: edit_distance.html  hash_template.html  prover.html  verifier.html
include/: instruction.hpp  interpreter.hpp  interpreter_impl.hpp  invoke.hpp  opcode.hpp  params.hpp  prelude.hpp  runtime.hpp  stack_value.hpp  transpiler.hpp  types.hpp  wgpu.hpp
include/host_modules/: bn254fr.hpp  ecc.hpp  env.hpp  host_interface.hpp  uint256.hpp  vbn254fr.hpp  wasi_preview1.hpp
include/ligetron/webgpu/: buffer_binding.hpp  buffer_view.hpp  common.hpp  device_bignum.hpp  device_context.hpp  powmod_context.hpp
include/ntt/: ntt_radix2.hpp
include/util/: color.hpp  csprng.hpp  deflate.hpp  json.hpp  log.cpp  log.hpp  mpz_assign.hpp  mpz_get.hpp  mpz_vector.hpp  portable_sample.hpp  recycle_pool.hpp  string.hpp  thread_model.hpp  timer.hpp  timestamp.hpp  tree.hpp  uuid.hpp
include/util/boost/: portable_binary_archive.hpp  portable_binary_iarchive.hpp  portable_binary_oarchive.hpp
include/zkp/: common.hpp  finite_field_gmp.hpp  hash.hpp  merkle_tree.hpp  nonbatch_context.hpp  proof_serializer.hpp  random.hpp
include/zkp/backend/: core.hpp  lazy_witness.hpp  ligero.hpp  witness_manager.hpp
include/zkp/hash/: rescue_prime.hpp  rescue_prime_precomputed.hpp
pack/shader/: bignum.wgsl  sha256.wgsl
proto/: common.proto  ligero_proof.proto
sdk/: CMakeLists.txt  README.md
sdk/cpp/: CMakeLists.txt  README.md
sdk/cpp/examples/: CMakeLists.txt
sdk/cpp/examples/ECDSA/: ecdsa_p256_verify.cpp  ecdsa_p256_verify_prehashed.cpp  ecdsa_secp256k1_verify.cpp  p256_sha256_sigver.cpp  secp256k1_sha256_sigver.cpp
sdk/cpp/examples/EdDSA/: ed25519_sigver.cpp  eddsa_batch_verify_no_args.cpp  eddsa_verify_no_args.cpp
sdk/cpp/examples/Poseidon/: poseidon_4to1.cpp  poseidon_batch_2to1.cpp  poseidon_batch_4to1.cpp  poseidon_s_2to1.cpp  poseidon_s_4to1.cpp  poseidon_s_batch_2to1.cpp
sdk/cpp/examples/Poseidon2/: poseidon2_bytes.cpp  poseidon2_bytes_batch.cpp
sdk/cpp/examples/SHA256/: sha256.cpp
sdk/cpp/examples/SHA512/: sha512.cpp
sdk/cpp/examples/edit_distance/: edit_distance.cpp  edit_distance.h
sdk/cpp/include/ligetron/: api.h  apidef.h  babyjubjub.h  bn254fr.h  bn254fr_bigint.hpp  bn254fr_class.h  curve.h  eddsa.h  poseidon.h  poseidon2.h  poseidon_s.h  sha2.h  sha512.h  uint256.h  uint256_cpp.h  vbn254fr.h  vbn254fr_class.h
sdk/cpp/include/ligetron/ec/: ecdsa.hpp  ed25519.hpp  eddsa.hpp  p256.hpp  secp256k1.hpp
sdk/cpp/include/ligetron/ec/detail/: concepts.hpp  coordinates.hpp  edward.hpp  elliptic_curve.hpp  generator_table.hpp  weierstrass.hpp
sdk/cpp/include/ligetron/ecc/: ecdsa.hpp  eddsa.hpp  utils.hpp
sdk/cpp/include/ligetron/ecc/curves/: coordinates.hpp  curve_base.hpp  ed25519.hpp  p256.hpp  secp256k1.hpp  twisted_edwards.hpp  weierstrass.hpp
sdk/cpp/include/ligetron/ff/: concepts.h  field_element.h  prime_field_uint256.h
sdk/cpp/src/: api.cpp  babyjubjub.cpp  bn254fr.cpp  bn254fr_bigint.cpp  ed25519.cpp  eddsa.cpp  p256.cpp  poseidon2.cpp  poseidon_constant.cpp  secp256k1.cpp  sha2.cpp  sha512.cpp  uint256.cpp  uint256_cpp.cpp  vbn254fr.cpp
sdk/cpp/src/ecc/curves/: ed25519.cpp  ed25519_precomp.inc  p256.cpp  p256_precomp.inc  secp256k1.cpp  secp256k1_precomp.inc
sdk/cpp/tests/: CMakeLists.txt  bn254fr_bigint_test.cpp  bn254fr_test.cpp  ecdsa_p256_test.cpp  ed25519_test.cpp  p256_test.cpp  prime_field_uint256_test.cpp  sha512_test.cpp  uint256_cpp_test.cpp  uint256_test.cpp
sdk/examples/: CMakeLists.txt
sdk/examples/EdDSA/: eddsa_batch_verify_no_args.cpp  eddsa_verify_no_args.cpp
sdk/examples/Poseidon/: poseidon.cpp  poseidon_batch_2to1.cpp
sdk/examples/Poseidon2/: poseidon2_bytes.cpp  poseidon2_bytes_batch.cpp
sdk/examples/edit_distance/: edit_distance.h
sdk/include/ligetron/: api.h  apidef.h  babyjubjub.h  bn254fr.h  bn254fr_class.h  fp256.h  poseidon.h  vbn254fr.h  vbn254fr_class.h
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/eddsa/: eddsa_batch_verify_no_args.rs  eddsa_verify_no_args.rs
sdk/rust/examples/edit_distance/: edit_distance.rs
sdk/rust/examples/poseidon/: poseidon_4to1.rs  poseidon_batch_2to1.rs  poseidon_batch_4to1.rs
sdk/rust/examples/poseidon2/: poseidon2_bytes.rs  poseidon2_bytes_batch.rs
sdk/rust/examples/sha256/: sha256.rs
sdk/rust/src/: api.rs  babyjubjub.rs  bn254fr.rs  eddsa.rs  lib.rs  poseidon.rs  poseidon2.rs  poseidon2_constant.rs  poseidon_constant.rs  sha2.rs  uint256.rs  vbn254fr.rs
sdk/src/: api.cpp  babyjubjub.cpp  bn254fr.cpp  eddsa.cpp  fp256.cpp  poseidon2.cpp  vbn254fr.cpp
shader/: bigint.wgsl.in  bignum.wgsl  bn254fr.wgsl.in  kernels.wgsl.in  sha256.wgsl
src/: bn254.cpp  webgpu_prover.cpp  webgpu_verifier.cpp
src/util/: mpz_get.cpp
src/webgpu/: buffer_binding.cpp  buffer_view.cpp  common.cpp  device_bignum.cpp  device_context.cpp  engine.cpp  powmod_context.cpp
tests/: CMakeLists.txt  f32.wat  f64.wat  i32_add.wat  i32_and.wat  i32_clz.wat  i32_ctz.wat  i32_div_s.wat  i32_div_u.wat  i32_eq.wat  i32_eqz.wat  i32_extend.wat  i32_ge_s.wat  i32_ge_u.wat  i32_gt_s.wat  i32_gt_u.wat  i32_le_s.wat  i32_le_u.wat  i32_lt_s.wat  i32_lt_u.wat  i32_mul.wat  i32_ne.wat  i32_or.wat  i32_popcnt.wat  i32_rem_s.wat  i32_rem_u.wat  i32_rotl.wat  i32_rotr.wat  i32_shl.wat  i32_shr_s.wat  i32_shr_u.wat  i32_sub.wat  i32_wrap_i64.wat  i32_xor.wat  i64_add.wat  i64_and.wat  i64_clz.wat  i64_ctz.wat  i64_div_s.wat  i64_div_u.wat  (+30 more)
tests/util/: CMakeLists.txt  README.md  test_mpz_get.cpp
tests/webgpu/: CMakeLists.txt  test_powmod.cpp
